hw solution.02